# vikingdb-python-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: __init__.py
examples/knowledge/: 01_init_client.py  02_doc_crud.py  03_point_crud.py  04_search.py  05_overall.py
examples/memory/: 01_init_client_and_collection.py  02_add_session.py  03_search_memory.py  04_exception_handling_test.py  __init__.py
examples/memory/template_practice/: ai_companion.py  ai_customer_service.py  ai_education.py  ai_email.py  ai_meeting_summary.py  code_agent.py
examples/vector/: 1_connectivity.py  2_collection_lifecycle.py  3_1_index_search_multimodal.py  3_2_index_search_vector.py  3_3_search_by_keyword.py  4_search_aggregate.py  5_1_embedding_multimodal.py  5_2_embedding_ds.py  6_exception_handling.py  7_rerank.py  E1_connectivity_test.py  E2_collection_lifecycle_test.py  E3_1_index_search_multimodal_test.py  E3_2_index_search_vector_test.py  E3_3_search_by_keyword_test.py  E4_search_aggregate_test.py  E5_embedding_test.py  E6_exception_handling_test.py  README.md  __init__.py  fetch_data_in_collection.py  guide_helpers.py  ping.py  test_helper.py  test_vector_header_auth.py  upsert_data_v1.py  viking_test.py
tests/: test_client_init.py  test_request_building.py  test_response_handling.py
tests/core/: test_pydantic.py
tests/vector/: test_http_client.py  test_param.py
vikingdb/: __init__.py  _client.py  auth.py  config.py  credentials.py  exceptions.py  request_options.py  transport.py  version.py
vikingdb/core/: __init__.py  async_base_http_client.py  auth.py  base_http_client.py  client.py  exceptions.py
vikingdb/knowledge/: __init__.py  client.py  collection.py  exceptions.py
vikingdb/knowledge/models/: base.py  chat.py  doc.py  point.py  rerank.py  search.py  service_chat.py
vikingdb/memory/: __init__.py  auth.py  client.py  collection.py  exceptions.py  types.py
vikingdb/vector/: __init__.py  base.py  client.py  collection.py  embedding.py  exceptions.py  index.py  param.py  service.py
vikingdb/vector/models/: __init__.py  collection.py  embedding.py  index.py  rerank.py
