[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vikingdb"
dynamic = ["version"]
description = "vikingdb Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["vikingdb", "vector", "bytedance", "volcengine", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.21.6",
    "httpx>=0.24.1",
    "requests>=2.28.1",
    "pydantic>=2.5.3",
    "urllib3>=2.0.7",
    "volcengine>=1.0.0",
    "aiohttp>=3.10.0",
]

[project.urls]
Documentation = "https://github.com/volcengine/volc-vikingdb-python-sdk/README.md"
Source = "https://github.com/volcengine/volc-vikingdb-python-sdk"

[tool.setuptools]
packages = ["vikingdb", "vikingdb.vector", "vikingdb.memory"]

[tool.setuptools.dynamic]
version = {attr = "vikingdb.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
